<resources>
    <string name="app_name">KPKTracker for Android™</string>
    <string name="app_short_name">KPKTracker</string>
    <string name="app_description">Inspired by KPKTracker on Windows Mobile, it allows you to track your journeys, mark significant way points (Voice recording, photos), export them in GPX format for later use with Open Street Map tools like JOSM.</string>
    <string name="tracklogger">Track logger</string>
    <string name="tracklogger_waiting_gps">Waiting for GPS fix to enable buttons&#8230;</string>
    <string name="tracklogger_voicerec_title">Voice recording</string>
    <string name="tracklogger_voicerec_text">Recording a {0}s audio clip.</string>
    <string name="tracklogger_voicerec_stop">Stop</string>
    <string name="tracklogger_btnBack">Back</string>
    <string name="tracklogger_tracked">Tracked: </string>
    <string name="tracklogger_gps_disabled">GPS disabled</string>
    <string name="tracklogger_gps_disabled_hint">GPS is disabled. Do you want to enable it?</string>
    <string name="tracklogger_choose_gallery_camera">Gallery or camera?</string>
    <string name="tracklogger_camera">Take photo with camera</string>
    <string name="tracklogger_gallery">Select photo from gallery</string>
    <string name="wplist">Waypoint list</string>
    <string name="wplist_latitude">Lat: </string>
    <string name="wplist_longitude">Long: </string>
    <string name="wplist_elevation">Ele: </string>
    <string name="wplist_accuracy">Accur: </string>
    <string name="wplist_compass">Comp. head.:</string>
    <string name="wplist_compass_accuracy">Comp. accur.:</string>
    <string name="trackmgr">Track manager</string>
    <string name="trackmgr_tracklist">Track list:</string>
    <string name="trackmgr_waypoints_count">Waypoints: </string>
    <string name="trackmgr_trackpoints_count">Trackpoints: </string>
    <string name="trackmgr_empty">You don\'t have any tracks.</string>
    <string name="trackmgr_newtrack_hint">Press to record a new track.</string>
    <string name="trackmgr_newtrack_error">Unable to create a new track: {0}</string>
    <string name="trackmgr_continuetrack_hint">You are currently recording <b>track #{0}</b>\nChoose it in the list to continue</string>
    <string name="trackmgr_contextmenu_stop">Stop tracking</string>
    <string name="trackmgr_contextmenu_resume">Resume tracking</string>
    <string name="trackmgr_contextmenu_delete">Delete</string>
    <string name="trackmgr_contextmenu_export">Export as GPX</string>
    <string name="trackmgr_contextmenu_share">Share GPX</string>
    <string name="trackmgr_contextmenu_osm_upload">Upload to OpenStreetMap</string>
    <string name="trackmgr_contextmenu_display">Display</string>
    <string name="trackmgr_contextmenu_details">Details</string>
    <string name="trackmgr_contextmenu_title">Track #{0}</string>
    <string name="trackmgr_delete_confirm">Track #{0} will be deleted</string>
    <string name="trackmgr_deleteall_confirm">All tracks will be deleted. Are you sure?</string>
    <string name="trackmgr_exporting">Exporting track #{0}&#8230;</string>
    <string name="trackmgr_exporting_prepare">Preparing export&#8230;</string>
    <string name="trackmgr_export_error">Unable to export track: {0}</string>
    <string name="trackmgr_exportall_confirm">All tracks will be exported, which could take a long time. Are you sure?</string>
    <string name="trackmgr_prepare_for_share_error">Unable to process the track: {0}</string>
    <string name="trackdetail">Track Details</string>
    <string name="trackdetail_startdate">Start time:</string>
    <string name="trackdetail_enddate">End time:</string>
    <string name="trackdetail_startloc">Starts at:</string>
    <string name="trackdetail_endloc">Ends at:</string>
    <string name="trackdetail_exportdate">Exported:</string>
    <string name="trackdetail_osm_upload_date">Uploaded to OpenStreetMap:</string>
    <string name="trackdetail_btn_export">Export as GPX</string>
    <string name="trackdetail_export_notyet">(Not exported yet)</string>
    <string name="trackdetail_osm_upload_notyet">(Not uploaded yet)</string>
    <string name="trackdetail_export_display">Display</string>
    <string name="trackdetail_description">Description</string>
    <string name="trackdetail_surveyor">Surveyor</string>
    <string name="trackdetail_route_name">Route name</string>
    <string name="trackdetail_route_id">Route ID</string>
    <string name="trackdetail_headway_in_minutes">Headway (mns)</string>
    <string name="trackdetail_vehicle_type">Vehicle type</string>
    <string name="trackdetail_vehicle_type_bus">Bus</string>
    <string name="trackdetail_vehicle_type_minibus">Minibus</string>
    <string name="trackdetail_vehicle_type_suzukis">Suzukis</string>
    <string name="trackdetail_vehicle_type_rickshaw">Rickshaw</string>
    <string name="trackdetail_fare_price">Fare price</string>
    <string name="trackdetail_project">Project name</string>
    <string name="trackdetail_tags">Tags (comma separated)</string>
    <string name="trackdetail_description_mandatory">You must enter a description</string>
    <string name="osm_visibility">OSM visibility</string>
    <string name="osm_visibility_private">Private</string>
    <string name="osm_visibility_public">Public</string>
    <string name="osm_visibility_trackable">Trackable</string>
    <string name="osm_visibility_identifiable">Identifiable</string>
    <string name="osm_upload">OpenStreetMap upload</string>
    <string name="osm_upload_ok">Save and upload</string>
    <string name="osm_upload_tmpfile_failed">Unable to export the track to a temporary file</string>
    <string name="osm_upload_oauth_failed">Unable to authenticate to OSM</string>
    <string name="osm_upload_sending">Sending track #{0}&#8230;</string>
    <string name="osm_upload_waiting_response">Waiting for OpenStreetMap server response&#8230;</string>
    <string name="osm_upload_error">Error while uploading track</string>
    <string name="osm_upload_bad_response">The OSM server returned an error: ({0}) message {1}</string>
    <string name="osm_upload_unauthorized">Autorization error. Would you like to clear the saved OpenStreetMap credentials?</string>
    <string name="osm_upload_sucess">OpenStreetMap upload succeeded</string>
    <string name="gpsstatus_record_voicerec">Voice record</string>
    <string name="gpsstatus_record_stillimage">Take photo</string>
    <string name="gpsstatus_record_textnote">Text note</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_waypointlist">Waypoints</string>
    <string name="menu_about">About</string>
    <string name="menu_displaytrack">Display track</string>
    <string name="menu_stoptracking">Stop &amp; save</string>
    <string name="menu_newtrack">New track</string>
    <string name="menu_deletetracks">Delete all tracks</string>
    <string name="menu_continue">Continue track</string>
    <string name="menu_stopcurrenttrack">Stop current track</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_export">Export as GPX</string>
    <string name="menu_osm_upload">OpenStreetMap upload</string>
    <string name="menu_center_to_gps">Center to GPS</string>
    <string name="menu_exportall">Export all as GPX</string>
    <string name="error_externalstorage_not_writable">Unable to write to external storage.</string>
    <string name="error_create_track_dir">Unable to create track folder %s</string>
    <string name="error_externalstorage_not_writable_hint">Please check if ext. storage is correctly inserted and mounted.</string>
    <string name="error_voicerec_failed">Voice recording has failed</string>
    <string name="error_userlayout_parsing">Error while parsing XML layout file. Please revert to default layout.</string>
    <string name="gpx_track_name">Tracked with KPKTracker for Android™</string>
    <string name="gpx_hdop_approximation_cmt">Warning: HDOP values aren\'t the HDOP as returned by the GPS device. They\'re approximated from the location accuracy in meters.</string>
    <string name="about">About</string>
    <string name="about_text">For more information, docs and issue report, please visit the project home page:</string>
    <string name="about_translate_text">Help translating KPKTracker:</string>
    <string name="about_debug_info">Debug info</string>
    <string name="about_export_db">Export database</string>
    <string name="about_exporting_db">Exporting database&#8230;</string>
    <string name="about_export_db_result">Database export result: %s</string>
    <string name="notification_ticker_text">KPKTracker is tracking</string>
    <string name="notification_title">KPKTracker is tracking (#{0})</string>
    <string name="notification_text">Tap here to display main screen</string>
    <string name="displaytrack">Display track</string>
    <string name="displaytrack_map">Display background map</string>
    <string name="displaytrack_north">N</string>
    <string name="trackdetail_save">Save</string>
    <string name="various_unit_meters">m</string>
    <string name="various_accuracy">Accuracy</string>
    <string name="various_accuracy_with_sats">Accuracy {0}{1} ({2}/{3})</string>
    <string name="various_waiting_gps_fix">Waiting for GPS fix&#8230; ({0}/{1})</string>
    <string name="various_heading_display">{0}&#176;</string>
    <string name="various_heading">Wait for heading&#8230;</string>
    <string name="various_heading_unknown">Heading can\'t be determined</string>
    <string name="various_export_finished">Export process finished successfully</string>
    <string name="displaytrackmap">OpenStreetMap track display</string>
    <string name="buttons_presets_context_menu_update_install">Update &amp; Install</string>
    <string name="buttons_presets_context_menu_delete">Delete</string>
    <string name="buttons_presets_updating_layout">Updating…</string>
    <string name="buttons_presets_successful_update">Layout was updated successfully</string>
    <string name="buttons_presets_unsuccessful_update">Layout was not updated, try again later</string>
    <string name="buttons_presets_delete_message">Are you sure to delete the {0} layout?</string>
    <string name="buttons_presets_delete_positive_confirmation">Yes</string>
    <string name="buttons_presets_successful_delete">The layout was deleted successfully</string>
    <string name="buttons_presets_icon_directory_deleted">The icon directory was deleted successfully</string>
    <string name="buttons_presets_icon_directory_does_not_exist">This file didn\'t have any icon directory associated</string>
    <string name="buttons_presets_unsuccessful_delete">The layout could not be deleted</string>
    <string name="available_layouts_connection_error">Error: unable to connect to the Internet</string>
    <string name="available_layouts_response_null_exception">Error: unable to connect to the default custom layouts repository</string>
    <string name="available_layouts_connecting_message">(Connecting…)</string>
    <string name="available_layouts_description_dialog_positive_confirmation">Download</string>
    <string name="available_layouts_not_available_language">Your language is not available select one from the list</string>
    <string name="available_layouts_language_dialog_title">Available Languages</string>
    <string name="available_layouts_checking_language_dialog">Checking local language versions</string>
    <string name="available_layouts_downloading_dialog">Downloading…</string>
    <string name="available_layouts_successful_download">The layout was downloaded successfully</string>
    <string name="available_layouts_unsuccessful_download">The layout can\'t be downloaded, try again later</string>
    <string name="available_layouts_null_response_received">Error retrieving data from server</string>
</resources>